feat(qr-code): finalize QR code design
- Designed and finalized the QR code for the portfolio
- Updated colors and typography for consistency with branding

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 </head>
 <body>
   <div class="card">
-<img class="card-image" src="images/image-qr-code.png" alt="QR-CODE">
+<img class="card-image" src="images/QR-Image.png" alt="QR-CODE">
 <div class="card-content">
   <h2 class="title">
-    Improve your front-end skills by building projects
+ Dive into my digital playground
   </h2>
-  <p  class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <p  class="description">See my latest projects, interactive designs, and creative work.
+  Let's connect and bring ideas to life!
 </p>
 </div>
   </div>
